# RL2

./: .gitignore  README.md  actor.py  algs.py  config.yaml  critic.py  data.py  main.py  pyproject.toml  requirements-gem.txt  requirements.txt  ring_attn.py  utils.py  worker.py
RL2/: algs.py
RL2/datasets/: __init__.py  base.py  dpo.py  rl.py  rm.py  sft.py
RL2/trainer/: base.py  dpo.py  orpo.py  ppo.py  rm.py  sft.py  (+1 more)
data/: olympiadbench.json
docs/: README.md  api_reference.md  multi_agent_guide.md  scaling_to_n_agents.md  walkthrough.html
envs/: base.py  countdown.py  deep_research.py  gem.py  gem_env.py  gem_env_guess_number.py  gem_env_vectorized_sync.py  multi_agent_base.py  multi_agent_code_review.py  multi_agent_countdown.py  multi_agent_debate.py  multi_agent_dynamic_team.py  multi_agent_n_collaborative.py  multi_agent_story.py  orz.py  searchr1.py
examples/: countdown_reinforce.sh  deepresearch_eval.sh  gem_ppo.sh  gem_reinforce.sh  gem_reinforce_guess_number.sh  gem_reinforce_guess_number_sync.sh  limo_sft.sh  multi_agent_code_review.sh  multi_agent_countdown_reinforce.sh  multi_agent_countdown_reinforce.slurm  multi_agent_debate.sh  multi_agent_dynamic_team.sh  multi_agent_n_collaborative.sh  multi_agent_story.sh  orz_ppo.sh  orz_reinforce.sh  searchr1.sh  skywork_rm.sh  train.sh  ultrafeedback_dpo.sh  ultrafeedback_orpo.sh  ultrafeedback_simpo.sh
models/: __init__.py  actor.py  critic.py  model.py  ring_attn_utils.py
scripts/: train.sh  train_qwen_7b.sh
utils/: comm.py  ring_attn.py
workers/: actor.py  base.py  critic.py  gem_rollout.py
(+42 files in other folders)
